--- a/index.css
+++ b/index.css
@@ -15,6 +15,9 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+.date-time-container{
+  padding: 0 5%;
+}
 
 .alert {
   display: flex;
@@ -61,7 +64,8 @@ header {
 
 .book-list-container,
 .add-new-book-container,
-.contact-container h1 {
+.contact-container h1,
+.contact-container p {
   text-align: center;
 }
 
